# wetty-chat

./: .gitignore  AGENTS.md  docker-compose.yml
.agents/skills/frontend-bug-triage/: SKILL.md
.agents/skills/localization/: SKILL.md
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile  start.ps1
backend/migrations/2026-02-25-060950-0000_initial/: down.sql  up.sql
backend/migrations/2026-02-26-000000_add_group_visibility/: down.sql  up.sql
backend/migrations/2026-03-15-161859-0000_drop_redundant_created_at_index/: down.sql  up.sql
backend/migrations/2026-03-17-055800-0000_dz_common_member/: up.sql
backend/migrations/2026-03-21-010715-0000_0010_message_reactions/: down.sql  up.sql
backend/migrations/2026-03-27-120000-0000_add_invites_and_membership_join_reason/: down.sql  up.sql
backend/migrations/2026-03-30-234413-0000_add_sticker_pack_delete_cascades/: down.sql  up.sql
backend/migrations/2026-04-01-223309-0000_add_pinned_messages/: down.sql  up.sql
backend/migrations/2026-04-06-155201-0000_add_stickerpack_order_to_user_extra/: down.sql  up.sql
backend/migrations/2026-04-08-053735-0000_add_attachment_queued_at/: down.sql  up.sql
backend/migrations/2026-04-12-061706-0000_add_message_publish_and_transcode_state/: down.sql  up.sql
backend/migrations/2026-04-13-235939-0000_add_message_reactions_message_created_at_index/: down.sql  up.sql
backend/src/: db_tracing.rs  main.rs  metrics.rs  models.rs  openapi.rs  schema.rs  serde_i64_string.rs  ws_registry.rs
backend/src/handlers/: attachments.rs  chats.rs  groups.rs  invites.rs  members.rs  messages.rs  mod.rs  pins.rs  push.rs  stickers.rs  threads.rs  users.rs  ws.rs
backend/src/handlers/chats/: messages.rs  mod.rs  reactions.rs
backend/src/handlers/ws/: messages.rs  mod.rs
backend/src/schema/: primary.rs
backend/src/services/: audio_transcode.rs  authz.rs  chat.rs  client_tracking.rs  image_processing.rs  mod.rs  push.rs  threads.rs  user.rs  ws_registry.rs
backend/src/utils/: auth.rs  ids.rs
bruno/chat/: read.bru
bruno/chat/environments/: Local Development.bru
docs/: API_Endpoints.md  architecture.md
wetty-chat-flutter/: .gitignore  AGENTS.md  pubspec.yaml  run_windows_dev.ps1
wetty-chat-flutter/docs/: chat_detail_mvvm_rearchitecture.md  threads_feature_plan.md
wetty-chat-flutter/ios/Runner/: Info.plist
wetty-chat-flutter/ios/Runner.xcodeproj/: project.pbxproj
wetty-chat-flutter/ios/fastlane/: Fastfile
wetty-chat-flutter/lib/: api_config.dart  chats.dart  main.dart  messages.dart  models.dart
wetty-chat-flutter/lib/app/: app.dart
wetty-chat-flutter/lib/config/: api_config.dart  auth_store.dart  realtime_service.dart
wetty-chat-flutter/lib/domain/: message_store.dart
wetty-chat-flutter/lib/draft/: chats.dart  group_members.dart  group_settings.dart  main.dart  messages.dart  models.dart
wetty-chat-flutter/lib/l10n/: app_en.arb  app_localizations.dart  app_localizations_en.dart  app_localizations_zh.dart  app_zh.arb  app_zh_TW.arb
wetty-chat-flutter/macos/Flutter/: GeneratedPluginRegistrant.swift
wetty-chat-flutter/macos/Runner/: Info.plist
wetty-chat-flutter/test/: auth_store_test.dart  dev_session_store_test.dart  widget_test.dart
wetty-chat-flutter/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
wetty-chat-mobile/: AGENTS.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.base.ts  vite.config.dev.ts  vite.config.js  vite.config.prod.ts  vite.config.staging.ts  vite.config.ts
wetty-chat-mobile/locales/en/: messages.po
wetty-chat-mobile/locales/zh-CN/: messages.po
wetty-chat-mobile/locales/zh-TW/: messages.po
wetty-chat-mobile/src/: App.tsx  app.scss  i18n.ts  main.tsx  serviceWorker.ts  vite-env.d.ts
wetty-chat-mobile/src/api/: chats.ts  client.ts  group.ts  invites.ts  messages.ts  pins.ts  stickers.ts  sync.ts  threads.ts  upload.ts  users.ts  ws.ts
wetty-chat-mobile/src/components/: FeatureGate.tsx  UserAvatar.module.scss  UserAvatar.tsx  app.jsx  app.tsx
wetty-chat-mobile/src/constants/: chatTiming.ts  emojiAndStickers.ts  stickers.ts
wetty-chat-mobile/src/css/: app.scss  chat-thread.scss
(+337 files in other folders)
