[package]
name = "wetty-chat-backend"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
diesel = { version = "2", features = ["postgres", "r2d2", "uuid", "chrono", "serde_json"] }
diesel_migrations = { version = "2", features = ["postgres"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "request-id", "util"] }
chrono = { version = "0.4.44", features = ["serde"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
ferroid = { version = "1", features = ["snowflake", "lock", "async-tokio"] }
dashmap = "6"

[profile.dev]
overflow-checks = false
incremental = true
