[package]
name = "wetty-chat-backend"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws", "multipart"] }
diesel = { version = "2", features = [
    "postgres",
    "r2d2",
    "uuid",
    "chrono",
    "serde_json",
] }
diesel_migrations = { version = "2", features = ["postgres"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tower = "0.5"
tower-http = { version = "0.6", features = [
    "trace",
    "request-id",
    "util",
    "limit",
    "cors",
] }
prometheus = "0.13"
chrono = { version = "0.4.44", features = ["serde"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
ferroid = { version = "1", features = ["snowflake", "lock", "async-tokio"] }
dashmap = "6"
futures = "0.3"
web-push = { version = "0.11.0", features = [
    "hyper-client",
], default-features = false }
aws-config = { version = "1.8.15", features = ["credentials-login"] }
aws-sdk-s3 = "1.125.0"
md5 = "0.8"
base64 = "0.22"
rc4 = "0.1"
urlencoding = "2.1.3"
diesel-derive-enum = { version = "2.1.0", features = ["postgres"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
emojis = "0.8"
unicode-segmentation = "1.13.2"
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }
matroska = "0.30"
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-axum = "0.2"
utoipa-swagger-ui = { version = "9", features = ["axum"] }

[profile.dev]
overflow-checks = false
incremental = true
